--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,11 +7,13 @@
   --silverBlue: #708fc1;
 }
 
-
 body {
   background-color: white;
   font-family: 'Open Sans', sans-serif;
-  
+}
+a {
+  color: inherit;
+  text-decoration: none;
 }
 .header {
   display: flex;
@@ -20,7 +22,6 @@ body {
   position: fixed;
   width: 100%;
   z-index: 1;
-  
 }
 .header h1 {
   margin: auto;
@@ -42,14 +43,13 @@ body {
 
 .home {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
   /* overflow: auto; */
   padding-top: 10%;
   width: 100%;
   height: 100%;
- 
 }
 
 .home-greeting {
@@ -60,22 +60,19 @@ body {
 }
 
 .block {
-  /* display: flex; */
-  width: 50%;
-  height: auto;
+  width: 50vw;
   padding: 2%;
+  margin: 3%;
   border-radius: 30px;
   font-size: 25px;
   font-weight: 500;
-  border-left: 5px solid #30323d;
-  border-bottom: 5px solid #30323d;
-  background-color: var(--silverBlue); 
+  /* border-left: 5px solid #30323d;
+  border-bottom: 5px solid #30323d; */
+  background-color: var(--silverBlue);
   transition: transform 0.4s ease-in-out;
-  cursor: pointer;
 }
 
-.block:hover{
-    transition-delay: 0.2s;
-    transform: translateY(-6px);
-
+.block:hover {
+  transition-delay: 0.2s;
+  transform: translateY(-6px);
 }
