--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,9 +7,25 @@
   --silverBlue: #708fc1;
 }
 
+
 body {
   background-color: white;
   font-family: 'Open Sans', sans-serif;
+  li {
+    list-style-type: none;
+  }
+
+}
+.test{
+  background-color: #885053;
+  width: 1000px;
+  height: 1000px;
+}
+.correct{
+  color:var(--green)
+}
+.wrong {
+  color: var(--red);
 }
 a {
   color: inherit;
@@ -41,7 +57,7 @@ a {
   display: block;
 }
 
-.home {
+.page{
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -76,3 +92,36 @@ a {
   transition-delay: 0.2s;
   transform: translateY(-6px);
 }
+
+.card{
+  width: 50vw;
+  padding: 2%;
+  margin: 3%;
+  border-radius: 30px;
+  font-size: 25px;
+  font-weight: 500;
+  background-color: var(--silverBlue);
+  text-align: center; 
+  position: relative; 
+
+  hr{
+    border-color: var(--calmGrey);
+  };
+  button {
+    width: 10vw;
+    height: 2vw;
+    position: absolute; 
+    bottom: 5%; 
+    right: 3%; 
+    border-radius: 30px;
+    cursor: pointer;
+  }
+
+}
+/* .card-button{
+  display: flex;
+  justify-content: end;
+  align-content: end;
+  width: 50%;
+
+} */
